--- a/src/main/resources/templates/layout/blank.html
+++ b/src/main/resources/templates/layout/blank.html
@@ -110,7 +110,7 @@
                     data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Login Screens:</h6>
-                        <a class="collapse-item" href="../admin/login.html">Login</a>
+                        <a class="collapse-item" href="../admin/loginForm.html">Login</a>
                         <a class="collapse-item" href="../admin/register.html">Register</a>
                         <a class="collapse-item" href="../admin/forgot-password.html">Forgot Password</a>
                         <div class="collapse-divider"></div>
@@ -403,7 +403,7 @@
                 <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
                 <div class="modal-footer">
                     <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-                    <a class="btn btn-primary" href="../admin/login.html">Logout</a>
+                    <a class="btn btn-primary" href="../admin/loginForm.html">Logout</a>
                 </div>
             </div>
         </div>
