--- a/src/main/resources/templates/admin/loginForm.html
+++ b/src/main/resources/templates/admin/loginForm.html
@@ -35,13 +35,12 @@
                     <div class="card-body p-0">
                         <!-- Nested Row within Card Body -->
                         <div class="row">
-                            <div class="col-lg-6 d-none d-lg-block bg-login-image"></div>
-                            <div class="col-lg-6">
+                            <div class="col-lg-12">
                                 <div class="p-5">
                                     <div class="text-center">
                                         <h1 class="h4 text-gray-900 mb-4">CMS 어드민</h1>
                                     </div>
-                                    <form class="user" name="formLogin" id="formLogin" th:object="${loginForm}" action="/login" method="post">
+                                    <form class="user" name="formLogin" id="formLogin" th:object="${loginForm}" th:action="@{/login}" method="post">
                                         <div class="form-group">
                                             <input type="text"
                                                    class="form-control form-control-user"
@@ -64,21 +63,11 @@
                                             </div>
                                         </div>
                                         <button class="btn btn-primary btn-user btn-block">Login</button>
-                                        <hr>
-                                        <a href="../index.html" class="btn btn-google btn-user btn-block">
-                                            <i class="fab fa-google fa-fw"></i> Login with Google
-                                        </a>
-                                        <a href="../index.html" class="btn btn-facebook btn-user btn-block">
-                                            <i class="fab fa-facebook-f fa-fw"></i> Login with Facebook
-                                        </a>
                                     </form>
-                                    <hr>
-                                    <div class="text-center">
-                                        <a class="small" href="forgot-password.html">Forgot Password?</a>
-                                    </div>
                                 </div>
                             </div>
                         </div>
+                        <!-- Nested Row within Card Body End -->
                     </div>
                 </div>
 
