--- a/src/main/resources/templates/admin/loginForm.html
+++ b/src/main/resources/templates/admin/loginForm.html
@@ -19,6 +19,7 @@
 
     <!-- Custom styles for this template-->
     <link href="../css/sb-admin-2.min.css" rel="stylesheet">
+    <link href="../css/custom.css" rel="stylesheet">
 
 </head>
 
@@ -40,7 +41,11 @@
                                     <div class="text-center">
                                         <h1 class="h4 text-gray-900 mb-4">CMS 어드민</h1>
                                     </div>
-                                    <form class="user" name="formLogin" id="formLogin" th:object="${loginForm}" th:action="@{/login}" method="post">
+                                    <form class="user" name="form" id="form" th:object="${loginForm}" th:action="@{/login}" method="post">
+                                        <div class="form-group" th:if="${#fields.hasGlobalErrors()}">
+                                            <p class="field-error" th:each="err : ${#fields.globalErrors()}"
+                                               th:utext="${err}">전체 오류 메시지</p>
+                                        </div>
                                         <div class="form-group">
                                             <input type="text"
                                                    class="form-control form-control-user"
