[COMMIT] - 타임리프 어드민 default, blank 레이아웃 적용 셋팅.

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -17,10 +17,15 @@
 
 
     <!-- CSS START -->
-    <link rel="stylesheet" th:href="@{/css/style.css}" type="text/css"/>
-    <link rel="stylesheet" th:href="@{/css/font/font-notosans/notosanskr.css}" type="text/css"/>
-    <link rel="stylesheet" th:href="@{/css/font/font-awesome/css/all.css}" type="text/css"/>
+    <link th:href="@{/css/style.css}" rel="stylesheet" type="text/css"/>
+    <link th:href="@{/css/font/font-notosans/notosanskr.css}" rel="stylesheet" type="text/css"/>
+    <link th:href="@{/css/font/font-awesome/css/all.css}" rel="stylesheet" type="text/css"/>
+    <link th:href="@{/css/sb-admin-2.min.css}" rel="stylesheet" type="text/css">
+    <link th:href="@{/css/custom.css}" rel="stylesheet" type="text/css">
+    <link th:href="@{/vendor/fontawesome-free/css/all.min.css}" rel="stylesheet" type="text/css">
     <!-- CSS END -->
+
+
 </head>
 
 </html>
