--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,17 +1,13 @@
 <!DOCTYPE html>
 <html lang="ko" th:fragment="fragment-footer" xmlns:th="http://www.thymeleaf.org">
-
-<!--<footer id="ft">-->
-<footer>
-    <div class="footer">
-        <div>
-            <img th:src="@{/images/logo.png}" alt="즐거운"/>
+    <!-- Footer -->
+    <footer class="sticky-footer bg-white">
+        <div class="container my-auto">
+            <div class="copyright text-center my-auto">
+                <div><span>개인 연습용 어드민 사이트</span></div>
+                <div><span>Copyright &copy; Website 2023</span></div>
+            </div>
         </div>
-        <div>
-            <div>㈜즐거운 / 대표이사 : 임관웅</div>
-            <div>서울특별시 강남구 언주로 709(논현동, 송암빌딩7층) (우)06053 / 사업자등록번호 : 104-86-33511</div>
-            <div>Copyright 2022. Branch all rights reserved.</div>
-        </div>
-    </div>
-</footer>
+    </footer>
+    <!-- End of Footer -->
 </html>
