--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -7,16 +7,11 @@
             <div class="sidebar-brand-icon rotate-n-15">
                 <i class="fas fa-laugh-wink"></i>
             </div>
-            <div class="sidebar-brand-text mx-3">CMS Admin</div>
+            <div class="sidebar-brand-text mx-3">Admin</div>
         </a>
 
         <!-- Divider -->
         <hr class="sidebar-divider my-0">
-
-        <!-- Heading -->
-        <div class="sidebar-heading">
-            Interfacea
-        </div>
 
         <!-- SidebarMenu -->
         <div th:replace="~{fragments/sidebarMenu :: fragment-sidebarMenu}"></div>
