[COMMIT] - 부트스트랩5 기반 adminKit 템플릿 적용

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,11 +1,35 @@
 <!DOCTYPE html>
 <html lang="ko" th:fragment="fragment-footer" xmlns:th="http://www.thymeleaf.org">
     <!-- Footer -->
-    <footer class="sticky-footer bg-white">
-        <div class="container my-auto">
-            <div class="copyright text-center my-auto">
-                <div><span>개인 연습용 어드민 사이트</span></div>
-                <div><span>Copyright &copy; Website 2023</span></div>
+    <footer class="footer">
+        <div class="container-fluid">
+            <div class="row text-muted">
+                <div class="col-3 text-start">
+                    <p class="mb-0">
+                        <a class="text-muted" href="https://adminkit.io/" target="_blank"><strong>Copyright &copy; Website 2023</strong></a>
+                    </p>
+                </div>
+                <div class="col-3 text-start">
+                    <p class="mb-0">
+                        <a class="text-muted" href="https://adminkit.io/" target="_blank"><strong>개인 연습용 어드민 사이트</strong></a>
+                    </p>
+                </div>
+                <div class="col-6 text-end">
+                    <ul class="list-inline">
+                        <li class="list-inline-item">
+                            <a class="text-muted" href="https://adminkit.io/" target="_blank">Support</a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a class="text-muted" href="https://adminkit.io/" target="_blank">Help Center</a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a class="text-muted" href="https://adminkit.io/" target="_blank">Privacy</a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a class="text-muted" href="https://adminkit.io/" target="_blank">Terms</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
     </footer>
