--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -12,7 +12,7 @@
     <title>CMS 어드민</title>
     <!-- TITLE END -->
     <!-- CSS START -->
-    <link th:href="@{/css/bootstrap.css}" rel="stylesheet" type="text/css">
+    <link th:href="@{/css/app.css}" rel="stylesheet" type="text/css">
     <!-- CSS END -->
 
 </head>
