--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -29,11 +29,20 @@
 
         <nav id="sidebar" class="sidebar js-sidebar">
             <div class="sidebar-content js-simplebar">
-                <a class="sidebar-brand" href="index.html">
-                    <span class="align-middle">AdminKit</span>
+                <a class="sidebar-brand" th:href="@{/}">
+                    <span class="align-middle">CMS어드민</span>
                 </a>
 
                 <ul class="sidebar-nav">
+                    <li class="sidebar-header">
+                        시스템관리
+                    </li>
+                    <li class="sidebar-item">
+                        <a class="sidebar-link" th:href="@{/system/menu}">
+                            <i class="align-middle" data-feather="sliders"></i> <span class="align-middle">메뉴</span>
+                        </a>
+                    </li>
+
                     <li class="sidebar-header">
                         Pages
                     </li>
