--- a/src/main/resources/templates/menu/list.html
+++ b/src/main/resources/templates/menu/list.html
@@ -1,45 +1,54 @@
 <!DOCTYPE html>
 <html th:replace="~{layout/default :: layout(~{::section})}" xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
-<section>
-    <div class="container">
+
+<script th:inline="javascript">
+
+</script>
+<section class="main">
+    <!-- TOPBAR END -->
+    <nav th:replace="~{fragments/topbar :: fragment-topbar}"></nav>
+    <!-- TOPBAR END -->
+    <main class="content">
         <div class="card">
             <div class="card-header">
                 <div class="d-flex justify-content-between align-items-center">
-                    <h5>메뉴 리스트</h5>
+                    <h1 class="h3 mb-3"><strong>메뉴</strong> 리스트</h1>
                     <button class="btn btn-primary">등록</button>
                 </div>
             </div>
             <div class="card-body">
-                <th:block th:each="menu : ${topLevelMenus}">
-                    <!-- 최상위 메뉴 시작 -->
-                    <div class="list-group">
-                        <a th:href="@{${menu.url}}" class="list-group-item list-group-item-action">
-                            <div class="d-flex w-100 justify-content-between">
-                                <h6 class="mb-1" th:text="${menu.name}">메뉴</h6>
-                                <p class="mb-1" th:text="${menu.url}"></p>
-                                <small></small>
-                            </div>
-                        </a>
-                    </div>
-                    <!-- 최상위 메뉴 종료 -->
-                    <!-- 하위메뉴 시작 -->
-                    <th:block th:if="${childMenusByParentId[menu.id]}"
-                              th:each="subMenu : ${childMenusByParentId[menu.id]}">
-                        <div class="list-group ml-3">
-                            <a th:href="@{${subMenu.url}}" class="list-group-item list-group-item-action">
-                                <div class="d-flex w-100 justify-content-between">
-                                    <h6 class="mb-1" th:text="${subMenu.name}">메뉴</h6>
-                                    <p class="mb-1" th:text="${subMenu.url}"></p>
-                                    <small></small>
-                                </div>
-                            </a>
-                        </div>
+                <table class="table table-hover">
+                    <thead>
+                    <tr>
+                        <th scope="col">순번</th>
+                        <th scope="col">메뉴명</th>
+                        <th scope="col">경로</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <th:block th:each="menu : ${topLevelMenus}">
+                        <tr>
+                            <td th:text="${menu.id}">순서</td>
+                            <td th:text="${menu.name}">메뉴명</td>
+                            <td th:text="${menu.url}">url</td>
+                        </tr>
+                        <!-- 하위메뉴 시작 -->
+                        <tr th:onclick="fnLocationHref([[${subMenu.url}]])"
+                            th:if="${childMenusByParentId[menu.id]}"
+                            th:each="subMenu : ${childMenusByParentId[menu.id]}">
+                            <td th:text="${subMenu.id}"></td>
+                            <td th:text="${subMenu.name}">메뉴명</td>
+                            <td th:text="${subMenu.url}">url</td>
+                        </tr>
+                        <!-- 하위메뉴 종료 -->
                     </th:block>
-                    <!-- 하위메뉴 종료 -->
-                </th:block>
+                    </tbody>
+                </table>
+
             </div>
         </div>
-    </div>
+    </main>
+
 </section>
 
 </html>
