--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -14,7 +14,7 @@
                         <div class="row no-gutters align-items-center">
                             <div class="col mr-2">
                                 <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">발생시간</div>
-                                <div class="h5 mb-0 font-weight-bold text-gray-800" th:text="${#dates.format(timestamp,'yyyy-MM-dd HH:mm:ss')}"></div>
+                                <div class="h5 mb-0 font-weight-bold text-gray-800" th:text="${timestamp}"></div>
                             </div>
                             <div class="col mr-2">
                                 <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">상태코드</div>
