--- a/src/main/resources/templates/admin/loginForm.html
+++ b/src/main/resources/templates/admin/loginForm.html
@@ -1,31 +1,64 @@
 <!DOCTYPE html>
 <html th:replace="~{layout/blank :: layout(~{::section})}" xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
-<section>
-    <div class="text-center">
-        <h2 class="h4 text-gray-900 mb-4">CMS 어드민</h2>
-    </div>
+<section class="main">
+    <main class="content d-flex w-100">
+        <div class="container d-flex flex-column">
+            <div class="row vh-100">
+                <div class="col-sm-10 col-md-8 col-lg-6 mx-auto d-table h-100">
+                    <div class="d-table-cell align-middle">
+
+                        <div class="card">
+                            <div class="card-body">
+                                <div class="m-sm-4">
+                                    <div class="text-center">
+                                        <h1 class="h3 mb-3"><strong>CMS</strong>어드민</h1>
+                                    </div>
+                                    <form name="form" id="form" th:object="${loginForm}" th:action="@{/login}" method="post">
+                                        <div class="mb-3" th:if="${#fields.hasGlobalErrors()}">
+                                            <p class="field-error" th:each="err : ${#fields.globalErrors()}"
+                                               th:utext="${err}">전체 오류 메시지</p>
+                                        </div>
+                                        <div class="mb-3">
+                                            <label for="adminId" class="form-label">아이디</label>
+                                            <input type="text"
+                                                   class="form-control form-control-lg"
+                                                   th:field="*{adminId}"
+                                                   placeholder="아이디를 입력하세요"
+                                                   th:errorclass="field-error">
+                                            <div class="field-error pl20" th:errors="*{adminId}"></div>
+                                        </div>
+                                        <div class="mb-3">
+                                            <label for="password" class="form-label">비밀번호</label>
+                                            <input type="password"
+                                                   class="form-control form-control-lg"
+                                                   th:field="*{password}"
+                                                   placeholder="비밀번호">
+                                            <div class="field-error pl20" th:errors="*{password}"></div>
+                                            <small>
+                                                <a href="index.html">Forgot password?(미구현)</a>
+                                            </small>
+                                        </div>
+                                        <div>
+                                            <label class="form-check">
+                                                <input class="form-check-input" type="checkbox" value="remember-me" name="remember-me" checked>
+                                                <span class="form-check-label">Remember me</span>
+                                            </label>
+                                        </div>
+                                        <div class="text-center mt-3">
+                                            <button class="btn btn-lg btn-primary ">Login</button>
+                                        </div>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+    <!--
     <form name="form" id="form" th:object="${loginForm}" th:action="@{/login}" method="post">
-        <div class="form-group" th:if="${#fields.hasGlobalErrors()}">
-            <p class="field-error" th:each="err : ${#fields.globalErrors()}"
-               th:utext="${err}">전체 오류 메시지</p>
-        </div>
-        <div class="form-group">
-            <label for="adminId" class="form-label">아이디</label>
-            <input type="text"
-                   class="form-control"
-                   th:field="*{adminId}"
-                   placeholder="아이디를 입력하세요"
-                   th:errorclass="field-error">
-            <div class="field-error pl20" th:errors="*{adminId}"></div>
-        </div>
-        <div class="form-group">
-            <label for="password" class="form-label">비밀번호</label>
-            <input type="password"
-                   class="form-control"
-                   th:field="*{password}"
-                   placeholder="비밀번호">
-            <div class="field-error pl20" th:errors="*{password}"></div>
-        </div>
         <div class="form-group">
             <div class="custom-control custom-checkbox small">
                 <input type="checkbox" class="custom-control-input" id="customCheck">
@@ -33,7 +66,7 @@
             </div>
         </div>
         <button class="btn btn-primary btn-user btn-block">Login</button>
-    </form>
+    </form>-->
 </section>
 
 </html>
