--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -1,31 +1,5 @@
 <!DOCTYPE html>
 <html lang="ko" th:fragment="fragment-sidebar" xmlns:th="http://www.thymeleaf.org">
-        <!-- Nav Item - Pages Collapse Menu -->
-        <!--
-        <th:block th:each="mainMenu : ${session.get(@globalConst.SESSION_LOGIN_INFO).mainMenuList}">
-            <li class="nav-item">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse"
-                   th:data-target="'#collapse' + ${mainMenu.menuId}"
-                   aria-expanded="true"
-                   th:aria-controls="'collapse' + ${mainMenu.menuId}">
-                    <i class="fas fa-fw fa-cog"></i>
-                    <span th:text="${mainMenu.name}">최상위 메뉴</span>
-                </a>
-
-                <div th:id="'collapse' + ${mainMenu.menuId}"
-                     class="collapse"
-                     th:aria-labelledby="'heading' + ${mainMenu.menuId}"
-                     data-parent="#accordionSidebar">
-                    <div class="bg-white py-2 collapse-inner rounded">
-                        <th:block th:each="subMenuList, subMenuListStat : ${session.get(@globalConst.SESSION_LOGIN_INFO).subMenuMap[mainMenu.menuId]}">
-                            <a class="collapse-item" th:href="@{${subMenuList.url}}" th:text="${subMenuList.name}"></a>
-                        </th:block>
-                    </div>
-                </div>
-            </li>
-            &lt;!&ndash; Divider &ndash;&gt;
-            <hr class="sidebar-divider">
-        </th:block>-->
 
         <nav id="sidebar" class="sidebar js-sidebar">
             <div class="sidebar-content js-simplebar">
@@ -34,14 +8,18 @@
                 </a>
 
                 <ul class="sidebar-nav">
-                    <li class="sidebar-header">
-                        시스템관리
-                    </li>
-                    <li class="sidebar-item">
-                        <a class="sidebar-link" th:href="@{/system/menu}">
-                            <i class="align-middle" data-feather="sliders"></i> <span class="align-middle">메뉴</span>
-                        </a>
-                    </li>
+                    <th:block th:each="mainMenu : ${session.get(@globalConst.SESSION_LOGIN_INFO).mainMenuList}">
+                        <li class="sidebar-header" th:text="${mainMenu.name}"></li>
+
+                        <th:block th:each="subMenu : ${session.get(@globalConst.SESSION_LOGIN_INFO).subMenuMap[mainMenu.menuId]}">
+                            <li class="sidebar-item">
+                                <a class="sidebar-link" th:href="@{${subMenu.url}}">
+                                    <span class="align-middle" th:text="${subMenu.name}"></span>
+                                </a>
+                            </li>
+                        </th:block>
+                    </th:block>
+
 
                     <li class="sidebar-header">
                         Pages
