[COMMIT] - 공지사항 게시판 기본셋팅 및 게시글 작성시 사용하는 에디터 ckeditor 추가적용. - 게시글 작성시 CreatedBy, LastModifiedBy 적용을 위한 LoginUserAuditorAware 추가

--- a/src/main/resources/templates/fragments/script.html
+++ b/src/main/resources/templates/fragments/script.html
@@ -5,8 +5,10 @@
 
     <!-- jQuery (부트스트랩의 자바스크립트 플러그인을 위해 필요합니다) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+
     <!-- 공통 스크립트-->
     <script src="/js/common.js"></script>
+    <script src="/js/ckeditor.js"></script>
     <script src="/js/app.js"></script>
 
     <script>
