--- a/src/main/resources/templates/notice/register.html
+++ b/src/main/resources/templates/notice/register.html
@@ -34,7 +34,7 @@
             <div class="card">
                 <div class="card-header">
                     <div class="d-flex justify-content-between align-items-center">
-                        <h1 class="h3 mb-3"><strong>공지사항</strong>상세</h1>
+                        <h1 class="h3 mb-3"><strong th:text="${CURRENT_MENU.name}"/>등록</h1>
                     </div>
                     <div class="d-flex justify-content-end">
                         <button class="btn btn-primary m-lg-1" onclick="fnEdit()">등록</button>
